name:		bktrees
version:	0.1
license:	BSD3
license-file:	LICENSE
author:		Josef Svenningsson
maintainer:	josef.svenningsson@gmail.com
synopsis:	A set data structure with approximate searching
build-depends:	base, containers
exposed-modules:	Data.Set.BKTree
extra-source-files: 	test/Test.hs
extensions:	CPP
ghc-options:	-O
